--- a/style.css
+++ b/style.css
@@ -7,4 +7,65 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.background {
+    background-image: url(background.jpeg);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: brightness(40%); 
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.header img {
+    width: 200px;
+}
+
+.registerBlock {
+    color: #fff;
+    width: 460px;
+    height: 640px;
+    background-color: rgba(0, 0, 0, 0.515);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.paddingBlock {
+    background-color: rgba(240, 248, 255, 0.23);
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputs input {
+    background-color: #434343;
+    border: none;
+    margin-top: 10px;
+    color: #fff;
+    padding: 5px;
+}
+
+.footer {
+    color: #fff;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 
