--- a/style.css
+++ b/style.css
@@ -23,6 +23,22 @@ body {
     flex-direction: column;
 }
 
+.checkboxBlock {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.button button {
+    width: 100%;
+    height: 45px;
+    background-color: #E50914;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
 .header img {
     width: 200px;
 }
@@ -38,12 +54,15 @@ body {
 }
 
 .paddingBlock {
-    background-color: rgba(240, 248, 255, 0.23);
     width: 70%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+::placeholder {
+    color: #fff;
 }
 
 .inputs {
@@ -57,6 +76,8 @@ body {
     margin-top: 10px;
     color: #fff;
     padding: 5px;
+    height: 35px;
+    border-radius: 5px;
 }
 
 .footer {
