--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
 
 .background {
     background-image: url(background.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -21,12 +24,42 @@ body {
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.isNew {
+    color: #737373;
+}
+
+.signupNow:hover {
+    text-decoration: none;
 }
 
 .checkboxBlock {
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 15px;
+    color:#a3a3a3;
+}
+
+.checkboxBlock input {
+    width: 20px;
+    height: 15px;
+}
+
+.moreInfo .letterSign {
+    color: #737373;
+}
+
+.moreInfo .letterP {
+    color: #737373;
+    padding-top: 10px;
+    font-size: 15px;
+}
+
+.moreInfo .letterP a {
+    color: rgb(79, 79, 129);
 }
 
 .button button {
@@ -35,19 +68,27 @@ body {
     background-color: #E50914;
     color: #fff;
     font-size: 17px;
-    font-weight: 700;
+    font-weight: 600;
     cursor: pointer;
+    border-radius: 5px;
+    border: none;
+}
+
+.header {
+    width: 100%;
 }
 
 .header img {
     width: 200px;
+    padding-top: 10px;
+    padding-left: 50px;
 }
 
 .registerBlock {
     color: #fff;
     width: 460px;
     height: 640px;
-    background-color: rgba(0, 0, 0, 0.515);
+    background-color: rgba(0, 0, 0, 0.535);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,7 +103,7 @@ body {
 }
 
 ::placeholder {
-    color: #fff;
+    color: #b1b1b1;
 }
 
 .inputs {
@@ -70,23 +111,64 @@ body {
     flex-direction: column;
 }
 
+input[type="text"]::placeholder {
+    padding-left: 10px; 
+  }
+
+  input[type="password"]::placeholder {
+    padding-left: 10px; 
+  }
+
 .inputs input {
     background-color: #434343;
     border: none;
-    margin-top: 10px;
-    color: #fff;
+    margin-top: 20px;
     padding: 5px;
-    height: 35px;
+    height: 40px;
     border-radius: 5px;
 }
 
 .footer {
     color: #fff;
+    font-size: 17px;
 }
 
 .footer {
+    display: flex;
+    
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+
+    color: #737373;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0.515);
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+.footer a {
+    color: #737373;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
+.block2 {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+}
+
+.block3 {
+    display: flex;
+    width: 30%;
+    justify-content: space-between;
+    width: 495px;
 }
 
